Fix create channel
